--- a/examples/personal-website/index.html
+++ b/examples/personal-website/index.html
@@ -11,7 +11,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Jeff Farkas | Engineer, runner, coffee addict.</title>
+  <title>Oswen Martinez | Musician, Student, Athlete.</title>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -33,7 +33,7 @@
   <div id="header" class="row align-items-center no-gutters background-color-white">
     <div class="col-sm-1 text-center">
       <span class="header-title text-color-green">
-        > Jeff Farkas <
+        > Oswen Martinez <
       </span>
     </div>
     <div class="col-sm-10">
@@ -47,19 +47,22 @@
         <li class="nav-item">
           <a class="nav-link" href="#contact">Contact</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#my-future-self">Future Me</a>
+        </li>
       </ul>
     </div>
   </div>
   <div id="hero" class="row no-gutters align-items-center background-color-red">
     <div class="col-sm-6">
-      <img class="hero-image img-full-width" src="src/img/jeff_1.jpg"/>
+      <img class="hero-image img-full-width" src="src/img/oswen.jpg"/>
     </div>
     <div class="col-sm-2 offset-2">
-      <div class="hero-title text-color-white">Jeff Farkas</div>
+      <div class="hero-title text-color-white">Oswen Martinez</div>
       <div class="hero-text text-color-white">
-        <h6>> Engineer</h6>
-        <h6>> Runner</h6>
-        <h6>> Coffee Addict</h6>
+        <h6>> Musician </h6>
+        <h6>> Student </h6>
+        <h6>> Athlete </h6>
       </div>
     </div>
   </div>
@@ -73,15 +76,15 @@
         <tbody>
           <tr>
             <td>Name:</td>
-            <td>Jeff Farkas</td>
+            <td>Oswen Martinez</td>
           </tr>
           <tr>
             <td>Age:</td>
-            <td>29 Years</td>
+            <td>14 Years</td>
           </tr>
           <tr>
             <td>Email:</td>
-            <td><a target="_blank" href="mailto:jeff@jefffarkas.com">jeff@jefffarkas.com</a></td>
+            <td><a target="_blank" href="mailto:oswen04@gmail.com">My Mail</a></td>
           </tr>
           <tr>
             <td>City:</td>
@@ -89,50 +92,52 @@
           </tr>
           <tr>
             <td>Coffee:</td>
-            <td>Cappuccino</td>
+            <td>Dark Coffee</td>
           </tr>
         </tbody>
       </table>
     </div>
     <div class="col-sm-4 text-center">
-      <img class="img-bordered" src="src/img/jeff_2.jpg">
+      <img class="img-bordered hero-image img-2nd-width" src="src/img/oswen.jpg">
     </div>
     <div class="col-sm-3">
       <h4 class="section-header text-center text-color-white">> My Story <</h4>
       <br />
-      <div class="text-color-green">I'm a software engineer by trade and problem solver at heart. I thrive in environments with unique challenges and complex problems.</div>
+      <div class="text-color-green">Piano is a wonderful instrument with many notes.</div>
       <br />
-      <div class="text-color-green">Running is my meditation and my means of exploration. It helps to focus my mind and can turn a big city into a little town.</div>
+      <div class="text-color-green">I love to learn and feed my curiosity.</div>
       <br />
-      <div class="text-color-green">There is nothing like enjoying a wonderful cappuccino in the park. In fact, I think I'll go get one right now.</div>
+      <div class="text-color-green">FUTBOL the art of controlling a ball.</div>
+      <br />
+      <div class="text-color-green">DOaowd</div>
     </div>
   </div>
   <div id="work" class="row section-row no-gutters align-items-center background-color-purple">
     <div class="col-sm-12">
       <h1 class="section-title text-color-white">Work</h1>
     </div>
-    <div class="col-sm-6 text-center text-color-white">
-      <h3>> Previous <</h3>
-      <div class="work-item">
-        <div>
-          <img class="img-bordered" src="src/img/fg.png" />
-        </div>
-        <div>
-          <h2>French Girls</h2>
-        </div>
-        <div>
-          <span>Take selfies. Get drawings. Commission real artists.</span>
-        </div>
-        <div>
-          <a class="link-alt" target="_blank" href="https://www.frenchgirlsapp.com/">https://www.frenchgirlsapp.com/</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 text-center text-color-white">
+    <div class="col-sm-6 text-center text-color-blue ">
       <h3>> Current <</h3>
       <div class="work-item">
         <div>
-          <img class="img-bordered" src="src/img/zeus.png" />
+          <img class="img-bordered img-3rd-width  " src="src/img/METHEOSWEN.jpg" />
+        </div>
+        <div>
+          <h2>French Girl</h2>
+        </div>
+        <div>
+          <span>ME!!</span>
+        </div>
+        <div>
+          <a class="link-alt2" target="_blank" href="https://www.frenchgirlsapp.com/">https://www.frenchgirlsapp.com/</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 text-center text-color-blue ">
+      <h3>> Future <</h3>
+      <div class="work-item">
+        <div>
+          <img id="my-future-self" class="img-bordered img-3rd-width " src="src/img/METHEOSWENFUTURE.jpg" />
         </div>
         <div>
           <h1>Zeus</h1>
@@ -141,7 +146,7 @@
           <span>Smartly furnished neighborhood homes for extended stays.</span>
         </div>
         <div>
-          <a class="link-alt" target="_blank" href="http://www.zeusliving.com/">https://www.zeusliving.com/</a>
+          <a class="link-alt2" target="_blank" href="http://www.zeusliving.com/">https://www.zeusliving.com/</a>
         </div>
       </div>
     </div>
@@ -153,9 +158,29 @@
     <div class="col-sm-12 text-center">
       <h3 class="text-color-white">> Email Me! <</h3>
       <h2>
-        <a id="contact-link" class="link-alt" target="_blank" href="mailto:jeff@jefffarkas.com">jeff@jefffarkas.com</a>
+        <a id="contact-link" class="link-alt" target="_blank" href="mailto:oswen04@gmail.com">oswen04@gmail.com</a>
       </h2>
     </div>
   </div>
+  
+    <h1>Tic-tac-toe</h1>
+    <p>Developed by Oswen Martinez</p>
+    <div class="board">
+      <div class="square" data-index="0"></div>
+      <div class="square" data-index="1"></div>
+      <div class="square" data-index="2"></div>
+      <div class="square" data-index="3"></div>
+      <div class="square" data-index="4"></div>
+      <div class="square" data-index="5"></div>
+      <div class="square" data-index="6"></div>
+      <div class="square" data-index="7"></div>
+      <div class="square" data-index="8"></div>
+      <div class="status"></div>
+    </div>
+  
+    <!-- Javascript is used to make things move and respond to things the user does. -->
+    <!-- This loads the code in your index.js file and automatically runs it when the page loads -->
+    <script src="src/index.js" ></script>
+  
 </body>
 </html>
